[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/Minecraft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Images/black_texture.png" type="Texture" id=3]
[ext_resource path="res://Scripts/WinScreen.gd" type="Script" id=4]
[ext_resource path="res://Sounds/MenuSong.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.396078 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 800.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )

[node name="Label" type="Label" parent="CenterContainer"]
margin_left = 303.0
margin_top = 74.0
margin_right = 496.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 1 )
text = "You win!"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 204.0
margin_right = 800.0
margin_bottom = 404.0
rect_min_size = Vector2( 0, 200 )
alignment = 1

[node name="Restart" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 68.0
margin_bottom = 98.0
focus_neighbour_top = NodePath("../MainMenu")
focus_neighbour_bottom = NodePath("../MainMenu")
text = "Restart"
arrow_margin_from_center = 55

[node name="MainMenu" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 102.0
margin_bottom = 132.0
focus_neighbour_top = NodePath("../Restart")
focus_neighbour_bottom = NodePath("../Restart")
text = "Main menu"
arrow_margin_from_center = 70

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -21.021
autoplay = true

[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_Option_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
